--- a/public/init.html
+++ b/public/init.html
@@ -39,7 +39,7 @@ body{
 	</div>
 	<div class="row">
 		<p class="text-right">
-		<a role="button" class="btn btn-danger" href="init">Please Go Ahead</a>
+		<a role="button" class="btn btn-danger" href="/init">Please Go Ahead</a>
 		<a role="button" class="btn btn-success" href="/">Go Back</a>
 		</p>
 	</div>
