--- a/public/reg.html
+++ b/public/reg.html
@@ -8,10 +8,20 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/login.css">
 </head>
 <body>
+<div class="container-fluid" id="warning">
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+            <div class="alert alert-danger">
+                </button><h4>Password not match</h4>
+            </div>
+        </div>
+    </div>
+</div>
+
 	<div class="container">
         <div id="login-wraper">
     <form class="form login-form" role="form" method="POST" action="/reg">
-    <legend>Register in<span class="blue">Fun Run Web</span></legend>
+    <legend>Sign up<span class="blue"> Fun Run Web</span></legend>
 
     <div class="body col-md-12">
     <div class="form-group col-md-offset-1 col-md-10">
@@ -20,10 +30,10 @@
     </div>
         <div class="form-group col-md-offset-1 col-md-10">
 
-        <input type="password" required="required" class="form-control input-lg" name="password" placeholder="Password">
+        <input type="password" required="required" class="form-control input-lg" name="password" id="password" placeholder="Password">
         </div>
         <div class="form-group col-md-offset-1 col-md-10">
-            <input type="password-again" required="required" class="form-control input-lg" name="password" placeholder="Password Again">
+            <input type="password" id="password-again" required="required" class="form-control input-lg" name="password-again" placeholder="Password Again">
         </div>
     </div>
 
@@ -40,5 +50,5 @@
 <script src="/javascripts/jquery.min.js"></script>
 <script src="/javascripts/bootstrap.min.js"></script>
 <script src="/javascripts/backstretch.js"></script>
-<script src="/javascripts/login.js"></script>
+<script src="/javascripts/reg.js"></script>
 </html>
